Sigil 0.5.1 TBA
    - Fix issue 1215: Book View line/column incorrect in status bar.
    - Fix issue 1216: Re-opening a document already in a tab resets the cursor
      position back to the top.
    - Fix issue 1218: F&R cleanup.
    - Fix issue 1212: Remove opf namespace rewriting when opening a file because
      it ended up being more trouble than it was wroth.
    - Fix issue 1188: New Sigil Regex engine crashes when pressing "replace all",
      works fine on pushing "replace" over and over and over again.
    - Implement issue 269: Select more than one item in the Book Browser Column.
    - Implement issue 792: "open next/previuos HTML section" buttons (next/prev with regard
      to reading order).
    - Implement issue 1135: New blank section must be automatically selected on book browser.
    - Implement issue 1148: Allow user to change the order of split view so book view or code
      view is first.
    - Implement issue 1168: Add ability to sort HTML files alphanumerically.
    - Implement issue 1174: Add new blank html section should insert section after selected file.
    - Implement issue 1181: Merge Previous when previous file is open in current tab requires
      refresh to see merged data.

Sigil 0.5.0 2012.01.21
    - Implement issue 533 and 1079: allow user to select which level(s) of <h> to include.
    - Fix issue 788: Error saving when the folder the file was in was renamed
      outside Sigil.
    - Fix issue 998: Don't select file extension on rename in book browser.
    - Fix issue 1111: Failure to rename to same name with case change.
    - Implement issue 205: Drag and drop for images to book and code views.
    - Fix issue 1019: issues with opf-namespace declaration.
    - Inline spell check with right click replace in Code View.
    - Fix issue 1064: Issues with editing epubs with differing html extensions.
      Take mimetype into account when opening the file to help determine how to
      deal with the file.